[tool.poetry]
name = "reddit-extract"
version = "0.1.0"
description = "A simple python reddit comment scraper."
authors = ["jbfink <john.fink@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
praw = "^7.6.0"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
